<resources>
    <string name="app_name">Venue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title :&#160;</string>
    <string name="description">Description:&#160;</string>
    <string name="contact">Contact :&#160;</string>
    <string name="address">Address :&#160;</string>
    <string name="rating">Rating :&#160;</string>
</resources>