<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.DetailFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:transitionName="venueTransition"
        app:cardBackgroundColor="#FEF1F2"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:weightSum="3">

                <TextView
                    android:id="@+id/venueNameTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:fontFamily="@font/poppins"
                    android:text="@string/title"
                    android:textColor="@color/light_blue"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/venueName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.3"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/dark_blue"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_margin="5dp"
                android:background="#008468" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:weightSum="3">

                <TextView
                    android:id="@+id/venueDescriptionTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:fontFamily="@font/poppins"
                    android:text="@string/description"
                    android:textColor="@color/light_blue"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/venueDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.3"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/dark_blue"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_margin="5dp"

                android:background="#008468" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:weightSum="3">

                <TextView
                    android:id="@+id/venueContactTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:fontFamily="@font/poppins"
                    android:text="@string/contact"
                    android:textColor="@color/light_blue"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/venueContact"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.3"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/dark_blue"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_margin="5dp"
                android:background="#008468" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:weightSum="3">

                <TextView
                    android:id="@+id/venueAddressTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:fontFamily="@font/poppins"
                    android:text="@string/address"
                    android:textColor="@color/light_blue"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/venueAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.7"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/dark_blue"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_margin="5dp"
                android:background="#008468" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:weightSum="3">

                <TextView
                    android:id="@+id/venueRatingTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:fontFamily="@font/poppins"
                    android:text="@string/rating"
                    android:textColor="@color/light_blue"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/venueRating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.7"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/dark_blue"
                    android:textSize="14sp" />

            </LinearLayout>



            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPhotoVenues"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="3"
                tools:itemCount="3"
                tools:listitem="@layout/item_photo_venue" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>